--- a/src/main/webapp/index_files/ime.html
+++ b/src/main/webapp/index_files/ime.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0038)http://webpager.renren.com/api/ime.jsp -->
-<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta http-equiv="Content-Type">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta http-equiv="Content-Type">
 
-<script type="text/javascript">
+		<script type="text/javascript">
 document.domain = 'renren.com';
 </script>
-<script type="text/javascript">
+		<script type="text/javascript">
 var wp_init_data = {"wp_settings":{"is_enter_submit":false,"beep":false,"block_stranger":false},"wp_blocks":{"friends":[],"groups":[],"ugc":[]},"wp_notify_sn":{"remind":0,"apply":0,"notice":0,"bbs":0},"wp_upload":{"tick":"d97d955939f96e6fcc158ad5f1efb4cc","tick_iframe":"323572039e7e0975706f659d5a5a9851"},"wp_sha1param":{"token":"dswndvck","timestamp":"1496134692958","nonce":"9r1dk","signature":"4286EA6562D96B0747BCACECB9E90BC78135A357"}};
 </script>
 </head>
 <body>
-<script type="text/javascript">
+	<script type="text/javascript">
 	var nx = top.nx;
 	var define = top.define;
 	var jQuery = top.jQuery;
 	var JSON = top.JSON
 </script>
-<script type="text/javascript" src="./messager.js.下载"></script>
-<script type="text/javascript">
+	<script type="text/javascript" src="./messager.js.下载"></script>
+	<script type="text/javascript">
 var im_js_url = 'http://s.xnimg.cn/a88489/nx/webpager/im.js';
 var roomkeeper_js_url = 'http://s.xnimg.cn/a83435/nx/webpager/roomkeeper.js';
 var log_js_url = 'http://s.xnimg.cn/a75512/nx/webpager/log.js'
@@ -40,7 +42,7 @@ map : {
 }
 });
 </script>
-<script type="text/javascript">
+	<script type="text/javascript">
 	var head = top.document.getElementsByTagName("head")[0];
 	
 	function loadCSS(url){
@@ -155,4 +157,5 @@ map : {
 	</script>
 
 
-</body></html>
+</body>
+</html>
