--- a/src/main/webapp/register_files/ajaxproxy.html
+++ b/src/main/webapp/register_files/ajaxproxy.html
@@ -1,6 +1,8 @@
 
 <!-- saved from url=(0037)http://guide.renren.com/ajaxproxy.htm -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <script>
 try{document.domain = window.location.hostname.split('.').reverse().slice(0,2).reverse().join('.');}catch(e){}
@@ -26,4 +28,5 @@ return new XMLHttpRequest();
 </head>
 <body>
 
-</body></html>
+</body>
+</html>
